test-infra/config/prow/crier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
        - name: crier
          image: gcr.io/k8s-prow/crier:v20220422-710d89b07b
          args:
            - --blob-storage-workers=0
            - --config-path=/etc/config/config.yaml
#            - --s3-credentials-file=/etc/s3-credentials/service-account.json
#            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --github-workers=5
            - --kubernetes-blob-storage-workers=0
            - --github-app-id=$(GITHUB_APP_ID)
            - --github-app-private-key-path=/etc/github/cert
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: github-token
              mountPath: /etc/github
              readOnly: true
#            - name: s3-credentials
#              mountPath: /etc/s3-credentials
#              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
        - name: github-token
          secret:
            secretName: github-token
#        - name: s3-credentials
#          secret:
#            secretName: s3-credentials
