test-infra/config/prow/status-reconciler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statusreconciler
  namespace: prow
  labels:
    app: statusreconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statusreconciler
  template:
    metadata:
      labels:
        app: statusreconciler
    spec:
      serviceAccountName: statusreconciler
      terminationGracePeriodSeconds: 180
      containers:
        - name: statusreconciler
          image: gcr.io/k8s-prow/status-reconciler:v20220422-710d89b07b
          args:
            - --dry-run=false
            - --continue-on-error=true
            - --plugin-config=/etc/plugins/plugins.yaml
            - --config-path=/etc/config/config.yaml
#            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
#            - --s3-credentials-file=/etc/s3-credentials/service-account.json
#            - --status-path=s3://status-reconciler/status-reconciler-status
            - --status-path=/local/path
            - --github-app-id=$(GITHUB_APP_ID)
            - --github-app-private-key-path=/etc/github/cert
          volumeMounts:
            - name: github-token
              mountPath: /etc/github
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
#            - name: s3-credentials
#              mountPath: /etc/s3-credentials
#              readOnly: true
      volumes:
        - name: github-token
          secret:
            secretName: github-token
        - name: config
          configMap:
            name: config
        - name: plugins
          configMap:
            name: plugins
#        - name: s3-credentials
#          secret:
#            secretName: s3-credentials
