test-infra/config/prow/deck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: deck
  labels:
    app: deck
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deck
  template:
    metadata:
      labels:
        app: deck
    spec:
      serviceAccountName: "deck"
      terminationGracePeriodSeconds: 30
      containers:
        - name: deck
          image: gcr.io/k8s-prow/deck:v20220422-710d89b07b
          args:
            - --config-path=/etc/config/config.yaml
            - --plugin-config=/etc/plugins/plugins.yaml
#            - --tide-url=http://tide/
            - --hook-url=http://hook:8888/plugin-help
#            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
#            - --github-graphql-endpoint=http://ghproxy/graphql # let's have the default graphql endpoint without ghproxy
#            - --s3-credentials-file=/etc/s3-credentials/service-account.json
#            - --spyglass=true # remove this see what happens
            - --github-app-id=$(GITHUB_APP_ID)
            - --github-app-private-key-path=/etc/github/cert
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: github-token
              mountPath: /etc/github
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
#            - name: s3-credentials
#              mountPath: /etc/s3-credentials
#              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
      volumes:
        - name: config
          configMap:
            name: config
        - name: github-token
          secret:
            secretName: github-token
        - name: plugins
          configMap:
            name: plugins
#        - name: s3-credentials
#          secret:
#            secretName: s3-credentials
---
apiVersion: v1
kind: Service
metadata:
  namespace: prow
  name: deck
spec:
  selector:
    app: deck
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-pods
