test-infra/config/prow/tide.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prow
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: "tide"
      containers:
        - name: tide
          image: gcr.io/k8s-prow/tide:v20220422-710d89b07b
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
#            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
#            - --github-graphql-endpoint=http://ghproxy/graphql
#            - --s3-credentials-file=/etc/s3-credentials/service-account.json
#            - --status-path=s3://tide/tide-status
#            - --history-uri=s3://tide/tide-history.json
            - --github-app-id=$(GITHUB_APP_ID)
            - --github-app-private-key-path=/etc/github/cert
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: github-token
              mountPath: /etc/github
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
      volumes:
        - name: github-token
          secret:
            secretName: github-token
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  namespace: prow
  name: tide
spec:
  selector:
    app: tide
  ports:
    - port: 80
      targetPort: 8888
