test-infra/config/prow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prow
  name: prow
  annotations:
    # Change this to your issuer when using cert-manager. Does
    # nothing when not using cert-manager.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # set it to the Deck service name
    nginx.ingress.kubernetes.io/default-backend: deck
spec:
  rules:
    - http: # for simplicity, we will not match on host
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deck
                port:
                  number: 80
          - path: /hook
            pathType: Prefix
            backend:
              service:
                name: hook
                port:
                  number: 8888
#          - path: /tide
#            pathType: Prefix
#            backend:
#              service:
#                name: tide
#                port:
#                  number: 8888
